modules/networking/main.tf
resource "azurerm_virtual_network" "vnet01" {
  name                = "vnet01"
  resource_group_name = var.resource_group_name
  location            = var.resource_group_location
  address_space       = [var.vnetcidr]
}

resource "azurerm_subnet" "web-subnet" {
  name                 = var.websubnetname
  virtual_network_name = azurerm_virtual_network.vnet01.name
  resource_group_name  = var.resource_group_name
  address_prefixes     = [var.websubnetcidr]
}

resource "azurerm_network_security_group" "web-nsg" {
  name                = "web-nsg"
  location            = var.resource_group_location
  resource_group_name      = var.resource_group_name
  
  security_rule {
    name                       = "ssh-rule-1"
    priority                   = 101
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_address_prefix      = "*"
    source_port_range          = "*"
    destination_address_prefix = "*"
    destination_port_range     = "22"
  }
  security_rule {
    name                       = "ssh-rule-2"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Deny"
    protocol                   = "Tcp"
    source_address_prefix      = "10.1.3.0/24"
    source_port_range          = "*"
    destination_address_prefix = "*"
    destination_port_range     = "22"
}
}

resource "azurerm_subnet_network_security_group_association" "web-nsg-subnet" {
  subnet_id                 = azurerm_subnet.web-subnet.id
  network_security_group_id = azurerm_network_security_group.web-nsg.id
}


resource "azurerm_subnet" "app-subnet" {
  name                 = var.appsubnetname
  virtual_network_name = azurerm_virtual_network.vnet01.name
  resource_group_name   = var.resource_group_name
  address_prefixes     = [var.appsubnetcidr]
}

resource "azurerm_network_security_group" "app-nsg" {
    name = "app-nsg"
    location = var.resource_group_location
    resource_group_name  = var.resource_group_name

    security_rule {
        name = "ssh-rule-1"
        priority = 100
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_address_prefix = "10.1.1.0/24"
        source_port_range = "8080"
        destination_address_prefix = "*"
        destination_port_range = "22"
    }
    
    security_rule {
        name = "ssh-rule-2"
        priority = 101
        direction = "Outbound"
        access = "Allow"
        protocol = "Tcp"
        source_address_prefix = "10.1.1.0/24"
        source_port_range = "*"
        destination_address_prefix = "*"
        destination_port_range = "22"
    }
}

resource "azurerm_subnet_network_security_group_association" "app-nsg-subnet" {
  subnet_id                 = azurerm_subnet.app-subnet.id
  network_security_group_id = azurerm_network_security_group.app-nsg.id
}


resource "azurerm_subnet" "db-subnet" {
  name                 = var.dbsubnetname
  virtual_network_name = azurerm_virtual_network.vnet01.name
  resource_group_name   = var.resource_group_name
  address_prefixes     = [var.dbsubnetcidr]
  service_endpoints    = ["Microsoft.Sql"]
}

resource "azurerm_network_security_group" "db-nsg" {
    name = "db-nsg"
    location = var.resource_group_location
    resource_group_name  = var.resource_group_name

    security_rule {
        name = "ssh-rule-1"
        priority = 101
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_address_prefix = "10.1.2.0/24"
        source_port_range = "8080"
        destination_address_prefix = "*"
        destination_port_range = "3306"
    }
    
    security_rule {
        name = "ssh-rule-2"
        priority = 102
        direction = "Outbound"
        access = "Allow"
        protocol = "Tcp"
        source_address_prefix = "10.1.2.0/24"
        source_port_range = "*"
        destination_address_prefix = "*"
        destination_port_range = "3306"
    }
    
    security_rule {
        name = "ssh-rule-3"
        priority = 100
        direction = "Outbound"
        access = "Deny"
        protocol = "Tcp"
        source_address_prefix = "10.1.1.0/24"
        source_port_range = "*"
        destination_address_prefix = "*"
        destination_port_range = "3306"
    }
}

resource "azurerm_subnet_network_security_group_association" "db-nsg-subnet" {
  subnet_id                 = azurerm_subnet.db-subnet.id
  network_security_group_id = azurerm_network_security_group.db-nsg.id
}
